--- a/App.config
+++ b/App.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
+	<connectionStrings>
+		<clear/>
+		<add name="dbConnection" connectionString="Server=DESKTOP-8FSFFAE\SQLEXPRESS;Database=SHAURYA;Integrated Security=True;"
+			 providerName="System.Data.SqlClient"/>
+	</connectionStrings>
+
+	<startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 </configuration>
